@@ -1,3 +1,11 @@
+2004-03-12  Paolo Carlini  <pcarlini@suse.de>
+
+	* docs/html/ext/howto.html: Add entry for DR 253 [Ready].
+	* include/bits/gslice_array.h: Add comment about DR 253.
+	* include/bits/indirect_array.h: Likewise.
+	* include/bits/mask_array.h: Likewise.
+	* include/bits/slice_array.h: Likewise.
+
 2004-03-11  Paul Kienzle  <pkienzle@nist.gov>
 	    Paolo Carlini  <pcarlini@suse.de>
 
